package system;

public interface ISistema {

    void lecturaArchivo();

    String reproducirCancion();

}
